public/lite/api/en/r2.3/_sources/api_cpp/mindspore_ops.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _namespace_mindspore__ops:

mindspore::ops
========================

Classes
-------


- :doc:`../generate/classmindspore_ops_Abs`

- :doc:`../generate/classmindspore_ops_AbsGrad`

- :doc:`../generate/classmindspore_ops_ACos`

- :doc:`../generate/classmindspore_ops_ACosGrad`

- :doc:`../generate/classmindspore_ops_Acosh`

- :doc:`../generate/classmindspore_ops_AcoshGrad`

- :doc:`../generate/classmindspore_ops_Activation`

- :doc:`../generate/classmindspore_ops_Adam`

- :doc:`../generate/classmindspore_ops_AdamWeightDecay`

- :doc:`../generate/classmindspore_ops_Add`

- :doc:`../generate/classmindspore_ops_Addcdiv`

- :doc:`../generate/classmindspore_ops_Addcmul`

- :doc:`../generate/classmindspore_ops_AdderFusion`

- :doc:`../generate/classmindspore_ops_AddExt`

- :doc:`../generate/classmindspore_ops_AddFusion`

- :doc:`../generate/classmindspore_ops_AddN`

- :doc:`../generate/classmindspore_ops_Affine`

- :doc:`../generate/classmindspore_ops_All`

- :doc:`../generate/classmindspore_ops_AllGather`

- :doc:`../generate/classmindspore_ops_Angle`

- :doc:`../generate/classmindspore_ops_ApplyCamePart1`

- :doc:`../generate/classmindspore_ops_ApplyCamePart2`

- :doc:`../generate/classmindspore_ops_ApplyCamePart3`

- :doc:`../generate/classmindspore_ops_ApplyCamePart4`

- :doc:`../generate/classmindspore_ops_ApplyMomentum`

- :doc:`../generate/classmindspore_ops_ApplyRotaryPosEmb`

- :doc:`../generate/classmindspore_ops_Arange`

- :doc:`../generate/classmindspore_ops_Argmax`

- :doc:`../generate/classmindspore_ops_ArgMaxExt`

- :doc:`../generate/classmindspore_ops_ArgMaxFusion`

- :doc:`../generate/classmindspore_ops_ArgMaxWithValue`

- :doc:`../generate/classmindspore_ops_Argmin`

- :doc:`../generate/classmindspore_ops_ArgMinFusion`

- :doc:`../generate/classmindspore_ops_ArgMinWithValue`

- :doc:`../generate/classmindspore_ops_Asin`

- :doc:`../generate/classmindspore_ops_AsinGrad`

- :doc:`../generate/classmindspore_ops_Asinh`

- :doc:`../generate/classmindspore_ops_AsinhGrad`

- :doc:`../generate/classmindspore_ops_Assert`

- :doc:`../generate/classmindspore_ops_Assign`

- :doc:`../generate/classmindspore_ops_AssignAdd`

- :doc:`../generate/classmindspore_ops_Atan`

- :doc:`../generate/classmindspore_ops_Atan2`

- :doc:`../generate/classmindspore_ops_AtanGrad`

- :doc:`../generate/classmindspore_ops_Atanh`

- :doc:`../generate/classmindspore_ops_Attention`

- :doc:`../generate/classmindspore_ops_AudioSpectrogram`

- :doc:`../generate/classmindspore_ops_AvgPool`

- :doc:`../generate/classmindspore_ops_AvgPool2D`

- :doc:`../generate/classmindspore_ops_AvgPool2DGrad`

- :doc:`../generate/classmindspore_ops_AvgPoolFusion`

- :doc:`../generate/classmindspore_ops_AvgPoolGrad`

- :doc:`../generate/classmindspore_ops_BaseOperator`

- :doc:`../generate/classmindspore_ops_BatchMatMul`

- :doc:`../generate/classmindspore_ops_BatchMatMulExt`

- :doc:`../generate/classmindspore_ops_BatchNorm`

- :doc:`../generate/classmindspore_ops_BatchNormGrad`

- :doc:`../generate/classmindspore_ops_BatchNormGradGrad`

- :doc:`../generate/classmindspore_ops_BatchNormGradWithActivation`

- :doc:`../generate/classmindspore_ops_BatchNormWithActivation`

- :doc:`../generate/classmindspore_ops_BatchNormWithAddAndActivation`

- :doc:`../generate/classmindspore_ops_BatchToSpace`

- :doc:`../generate/classmindspore_ops_BatchToSpaceND`

- :doc:`../generate/classmindspore_ops_Betainc`

- :doc:`../generate/classmindspore_ops_BiasAdd`

- :doc:`../generate/classmindspore_ops_BiasAddGrad`

- :doc:`../generate/classmindspore_ops_BinaryCrossEntropy`

- :doc:`../generate/classmindspore_ops_BoolNot`

- :doc:`../generate/classmindspore_ops_Broadcast`

- :doc:`../generate/classmindspore_ops_BroadcastTo`

- :doc:`../generate/classmindspore_ops_Call`

- :doc:`../generate/classmindspore_ops_Cast`

- :doc:`../generate/classmindspore_ops_Ceil`

- :doc:`../generate/classmindspore_ops_CeLU`

- :doc:`../generate/classmindspore_ops_Cholesky`

- :doc:`../generate/classmindspore_ops_CholeskyGrad`

- :doc:`../generate/classmindspore_ops_CholeskyInverse`

- :doc:`../generate/classmindspore_ops_ClampScalar`

- :doc:`../generate/classmindspore_ops_ClampTensor`

- :doc:`../generate/classmindspore_ops_Clip`

- :doc:`../generate/classmindspore_ops_Complex`

- :doc:`../generate/classmindspore_ops_Concat`

- :doc:`../generate/classmindspore_ops_Conj`

- :doc:`../generate/classmindspore_ops_ConstantOfShape`

- :doc:`../generate/classmindspore_ops_ConstantPadND`

- :doc:`../generate/classmindspore_ops_Contiguous`

- :doc:`../generate/classmindspore_ops_Conv2D`

- :doc:`../generate/classmindspore_ops_Conv2DBackpropFilterFusion`

- :doc:`../generate/classmindspore_ops_Conv2DBackpropInputFusion`

- :doc:`../generate/classmindspore_ops_Conv2DFusion`

- :doc:`../generate/classmindspore_ops_Conv2DTranspose`

- :doc:`../generate/classmindspore_ops_Conv2dTransposeFusion`

- :doc:`../generate/classmindspore_ops_Convolution`

- :doc:`../generate/classmindspore_ops_ConvolutionGrad`

- :doc:`../generate/classmindspore_ops_Copy`

- :doc:`../generate/classmindspore_ops_Correlate`

- :doc:`../generate/classmindspore_ops_Cos`

- :doc:`../generate/classmindspore_ops_Cosh`

- :doc:`../generate/classmindspore_ops_Crop`

- :doc:`../generate/classmindspore_ops_CropAndResize`

- :doc:`../generate/classmindspore_ops_CudnnUniformReal`

- :doc:`../generate/classmindspore_ops_Cummax`

- :doc:`../generate/classmindspore_ops_Cummin`

- :doc:`../generate/classmindspore_ops_CumProd`

- :doc:`../generate/classmindspore_ops_CumSum`

- :doc:`../generate/classmindspore_ops_Custom`

- :doc:`../generate/classmindspore_ops_CustomExtractFeatures`

- :doc:`../generate/classmindspore_ops_CustomNormalize`

- :doc:`../generate/classmindspore_ops_CustomPredict`

- :doc:`../generate/classmindspore_ops_DCT`

- :doc:`../generate/classmindspore_ops_DecoderKVCache`

- :doc:`../generate/classmindspore_ops_Dense`

- :doc:`../generate/classmindspore_ops_Depend`

- :doc:`../generate/classmindspore_ops_DepthToSpace`

- :doc:`../generate/classmindspore_ops_DetectionPostProcess`

- :doc:`../generate/classmindspore_ops_Diag`

- :doc:`../generate/classmindspore_ops_Diagonal`

- :doc:`../generate/classmindspore_ops_Div`

- :doc:`../generate/classmindspore_ops_DivFusion`

- :doc:`../generate/classmindspore_ops_DivMod`

- :doc:`../generate/classmindspore_ops_Dot`

- :doc:`../generate/classmindspore_ops_Dropout`

- :doc:`../generate/classmindspore_ops_DropoutGrad`

- :doc:`../generate/classmindspore_ops_DynamicQuant`

- :doc:`../generate/classmindspore_ops_Eig`

- :doc:`../generate/classmindspore_ops_Eltwise`

- :doc:`../generate/classmindspore_ops_Elu`

- :doc:`../generate/classmindspore_ops_EluGrad`

- :doc:`../generate/classmindspore_ops_Embedding`

- :doc:`../generate/classmindspore_ops_EmbeddingDenseBackward`

- :doc:`../generate/classmindspore_ops_EmbeddingLookupFusion`

- :doc:`../generate/classmindspore_ops_Equal`

- :doc:`../generate/classmindspore_ops_Erf`

- :doc:`../generate/classmindspore_ops_Erfc`

- :doc:`../generate/classmindspore_ops_Erfinv`

- :doc:`../generate/classmindspore_ops_Exp`

- :doc:`../generate/classmindspore_ops_ExpandDims`

- :doc:`../generate/classmindspore_ops_ExpFusion`

- :doc:`../generate/classmindspore_ops_Expm1`

- :doc:`../generate/classmindspore_ops_ExtractImagePatches`

- :doc:`../generate/classmindspore_ops_Eye`

- :doc:`../generate/classmindspore_ops_FakeQuantWithMinMaxVars`

- :doc:`../generate/classmindspore_ops_FakeQuantWithMinMaxVarsPerChannel`

- :doc:`../generate/classmindspore_ops_FastGeLU`

- :doc:`../generate/classmindspore_ops_FastGeLUGrad`

- :doc:`../generate/classmindspore_ops_FFT`

- :doc:`../generate/classmindspore_ops_FFT2`

- :doc:`../generate/classmindspore_ops_FftImag`

- :doc:`../generate/classmindspore_ops_FFTN`

- :doc:`../generate/classmindspore_ops_FftReal`

- :doc:`../generate/classmindspore_ops_FFTShapeCopy`

- :doc:`../generate/classmindspore_ops_FFTShift`

- :doc:`../generate/classmindspore_ops_FFTWithSize`

- :doc:`../generate/classmindspore_ops_Fill`

- :doc:`../generate/classmindspore_ops_FillScalar`

- :doc:`../generate/classmindspore_ops_FillTensor`

- :doc:`../generate/classmindspore_ops_FlashAttentionScore`

- :doc:`../generate/classmindspore_ops_FlashAttentionScoreGrad`

- :doc:`../generate/classmindspore_ops_Flatten`

- :doc:`../generate/classmindspore_ops_Floor`

- :doc:`../generate/classmindspore_ops_FloorDiv`

- :doc:`../generate/classmindspore_ops_FloorMod`

- :doc:`../generate/classmindspore_ops_FullConnection`

- :doc:`../generate/classmindspore_ops_FusedBatchNorm`

- :doc:`../generate/classmindspore_ops_Gather`

- :doc:`../generate/classmindspore_ops_GatherD`

- :doc:`../generate/classmindspore_ops_GatherDGradV2`

- :doc:`../generate/classmindspore_ops_GatherNd`

- :doc:`../generate/classmindspore_ops_Gcd`

- :doc:`../generate/classmindspore_ops_GeLU`

- :doc:`../generate/classmindspore_ops_GeLUGrad`

- :doc:`../generate/classmindspore_ops_Geqrf`

- :doc:`../generate/classmindspore_ops_GLU`

- :doc:`../generate/classmindspore_ops_Greater`

- :doc:`../generate/classmindspore_ops_GreaterEqual`

- :doc:`../generate/classmindspore_ops_GridSampler2D`

- :doc:`../generate/classmindspore_ops_GridSampler2DGrad`

- :doc:`../generate/classmindspore_ops_GridSampler3D`

- :doc:`../generate/classmindspore_ops_GridSampler3DGrad`

- :doc:`../generate/classmindspore_ops_GroupNorm`

- :doc:`../generate/classmindspore_ops_GroupNormGrad`

- :doc:`../generate/classmindspore_ops_GRU`

- :doc:`../generate/classmindspore_ops_HashtableLookup`

- :doc:`../generate/classmindspore_ops_HFFT`

- :doc:`../generate/classmindspore_ops_HFFT2`

- :doc:`../generate/classmindspore_ops_HFFTN`

- :doc:`../generate/classmindspore_ops_HShrink`

- :doc:`../generate/classmindspore_ops_HShrinkGrad`

- :doc:`../generate/classmindspore_ops_HSigmoid`

- :doc:`../generate/classmindspore_ops_HSigmoidGrad`

- :doc:`../generate/classmindspore_ops_HSwish`

- :doc:`../generate/classmindspore_ops_HSwishGrad`

- :doc:`../generate/classmindspore_ops_Identity`

- :doc:`../generate/classmindspore_ops_IFFT`

- :doc:`../generate/classmindspore_ops_IFFT2`

- :doc:`../generate/classmindspore_ops_IFFTN`

- :doc:`../generate/classmindspore_ops_IFFTShift`

- :doc:`../generate/classmindspore_ops_IHFFT`

- :doc:`../generate/classmindspore_ops_IHFFT2`

- :doc:`../generate/classmindspore_ops_IHFFTN`

- :doc:`../generate/classmindspore_ops_InstanceNorm`

- :doc:`../generate/classmindspore_ops_InvertPermutation`

- :doc:`../generate/classmindspore_ops_IRFFT`

- :doc:`../generate/classmindspore_ops_IRFFT2`

- :doc:`../generate/classmindspore_ops_IRFFTDouble`

- :doc:`../generate/classmindspore_ops_IRFFTN`

- :doc:`../generate/classmindspore_ops_IsFinite`

- :doc:`../generate/classmindspore_ops_L2NormalizeFusion`

- :doc:`../generate/classmindspore_ops_LayerNorm`

- :doc:`../generate/classmindspore_ops_LayerNormExt`

- :doc:`../generate/classmindspore_ops_LayerNormFusion`

- :doc:`../generate/classmindspore_ops_LayerNormGrad`

- :doc:`../generate/classmindspore_ops_LayerNormGradExt`

- :doc:`../generate/classmindspore_ops_LayerNormGradGrad`

- :doc:`../generate/classmindspore_ops_LayerNormGradV3`

- :doc:`../generate/classmindspore_ops_LayerNormV3`

- :doc:`../generate/classmindspore_ops_LeakyRelu`

- :doc:`../generate/classmindspore_ops_Less`

- :doc:`../generate/classmindspore_ops_LessEqual`

- :doc:`../generate/classmindspore_ops_LinSpace`

- :doc:`../generate/classmindspore_ops_LinSpaceExt`

- :doc:`../generate/classmindspore_ops_ListToTuple`

- :doc:`../generate/classmindspore_ops_Log`

- :doc:`../generate/classmindspore_ops_Log1p`

- :doc:`../generate/classmindspore_ops_LogicalAnd`

- :doc:`../generate/classmindspore_ops_LogicalNot`

- :doc:`../generate/classmindspore_ops_LogicalOr`

- :doc:`../generate/classmindspore_ops_LogicalXor`

- :doc:`../generate/classmindspore_ops_Logit`

- :doc:`../generate/classmindspore_ops_LogitGrad`

- :doc:`../generate/classmindspore_ops_LogMatrixDeterminant`

- :doc:`../generate/classmindspore_ops_LogSoftmax`

- :doc:`../generate/classmindspore_ops_LogSoftmaxGrad`

- :doc:`../generate/classmindspore_ops_LpNormalization`

- :doc:`../generate/classmindspore_ops_LRN`

- :doc:`../generate/classmindspore_ops_LshProjection`

- :doc:`../generate/classmindspore_ops_LSTM`

- :doc:`../generate/classmindspore_ops_MakeTuple`

- :doc:`../generate/classmindspore_ops_MaskedFill`

- :doc:`../generate/classmindspore_ops_MatMul`

- :doc:`../generate/classmindspore_ops_MatMulExt`

- :doc:`../generate/classmindspore_ops_MatMulFusion`

- :doc:`../generate/classmindspore_ops_MatrixDeterminant`

- :doc:`../generate/classmindspore_ops_MatrixExp`

- :doc:`../generate/classmindspore_ops_Max`

- :doc:`../generate/classmindspore_ops_Maximum`

- :doc:`../generate/classmindspore_ops_MaximumGrad`

- :doc:`../generate/classmindspore_ops_MaximumGradGrad`

- :doc:`../generate/classmindspore_ops_MaxPool`

- :doc:`../generate/classmindspore_ops_MaxPoolFusion`

- :doc:`../generate/classmindspore_ops_MaxPoolGradWithIndices`

- :doc:`../generate/classmindspore_ops_MaxPoolGradWithMask`

- :doc:`../generate/classmindspore_ops_MaxPoolWithIndices`

- :doc:`../generate/classmindspore_ops_MaxPoolWithMask`

- :doc:`../generate/classmindspore_ops_MeanExt`

- :doc:`../generate/classmindspore_ops_Mfcc`

- :doc:`../generate/classmindspore_ops_Min`

- :doc:`../generate/classmindspore_ops_Minimum`

- :doc:`../generate/classmindspore_ops_MinimumGrad`

- :doc:`../generate/classmindspore_ops_Mod`

- :doc:`../generate/classmindspore_ops_Mul`

- :doc:`../generate/classmindspore_ops_MulFusion`

- :doc:`../generate/classmindspore_ops_MultiScaleDeformableAttentionV2Grad`

- :doc:`../generate/classmindspore_ops_MultiScaleDeformableAttnFunctionV2`

- :doc:`../generate/classmindspore_ops_Mv`

- :doc:`../generate/classmindspore_ops_NanToNum`

- :doc:`../generate/classmindspore_ops_Neg`

- :doc:`../generate/classmindspore_ops_NextAfter`

- :doc:`../generate/classmindspore_ops_NLLLoss`

- :doc:`../generate/classmindspore_ops_NLLLossGrad`

- :doc:`../generate/classmindspore_ops_NonMaxSuppression`

- :doc:`../generate/classmindspore_ops_NonZero`

- :doc:`../generate/classmindspore_ops_NormalExt`

- :doc:`../generate/classmindspore_ops_NotEqual`

- :doc:`../generate/classmindspore_ops_NPUClearFloatStatusV2`

- :doc:`../generate/classmindspore_ops_NPUGetFloatStatusV2`

- :doc:`../generate/classmindspore_ops_OneHot`

- :doc:`../generate/classmindspore_ops_OneHotExt`

- :doc:`../generate/classmindspore_ops_Ones`

- :doc:`../generate/classmindspore_ops_OnesLike`

- :doc:`../generate/classmindspore_ops_OnesLikeExt`

- :doc:`../generate/classmindspore_ops_OperatorRegister`

- :doc:`../generate/classmindspore_ops_OperatorRegisterHelper`

- :doc:`../generate/classmindspore_ops_Pad`

- :doc:`../generate/classmindspore_ops_PadFusion`

- :doc:`../generate/classmindspore_ops_PagedAttention`

- :doc:`../generate/classmindspore_ops_PagedAttentionMask`

- :doc:`../generate/classmindspore_ops_PartialFusion`

- :doc:`../generate/classmindspore_ops_Pow`

- :doc:`../generate/classmindspore_ops_PowFusion`

- :doc:`../generate/classmindspore_ops_PReLU`

- :doc:`../generate/classmindspore_ops_PReLUFusion`

- :doc:`../generate/classmindspore_ops_PReLUGrad`

- :doc:`../generate/classmindspore_ops_PriorBox`

- :doc:`../generate/classmindspore_ops_ProdExt`

- :doc:`../generate/classmindspore_ops_PromptKVCache`

- :doc:`../generate/classmindspore_ops_Qr`

- :doc:`../generate/classmindspore_ops_QuantBatchMatmul`

- :doc:`../generate/classmindspore_ops_QuantDTypeCast`

- :doc:`../generate/classmindspore_ops_RaggedRange`

- :doc:`../generate/classmindspore_ops_RandomNormal`

- :doc:`../generate/classmindspore_ops_RandomStandardNormal`

- :doc:`../generate/classmindspore_ops_RandpermV2`

- :doc:`../generate/classmindspore_ops_Range`

- :doc:`../generate/classmindspore_ops_Rank`

- :doc:`../generate/classmindspore_ops_Real`

- :doc:`../generate/classmindspore_ops_RealDiv`

- :doc:`../generate/classmindspore_ops_Reciprocal`

- :doc:`../generate/classmindspore_ops_ReciprocalGrad`

- :doc:`../generate/classmindspore_ops_Reduce`

- :doc:`../generate/classmindspore_ops_ReduceAll`

- :doc:`../generate/classmindspore_ops_ReduceAny`

- :doc:`../generate/classmindspore_ops_ReduceFusion`

- :doc:`../generate/classmindspore_ops_ReduceMax`

- :doc:`../generate/classmindspore_ops_ReduceMean`

- :doc:`../generate/classmindspore_ops_ReduceMin`

- :doc:`../generate/classmindspore_ops_ReduceProd`

- :doc:`../generate/classmindspore_ops_ReduceScatter`

- :doc:`../generate/classmindspore_ops_ReduceStd`

- :doc:`../generate/classmindspore_ops_ReduceSum`

- :doc:`../generate/classmindspore_ops_ReflectionPad1D`

- :doc:`../generate/classmindspore_ops_ReflectionPad1DGrad`

- :doc:`../generate/classmindspore_ops_ReflectionPad2D`

- :doc:`../generate/classmindspore_ops_ReflectionPad2DGrad`

- :doc:`../generate/classmindspore_ops_ReflectionPad3D`

- :doc:`../generate/classmindspore_ops_ReflectionPad3DGrad`

- :doc:`../generate/classmindspore_ops_ReLU`

- :doc:`../generate/classmindspore_ops_ReLU6`

- :doc:`../generate/classmindspore_ops_ReLU6Grad`

- :doc:`../generate/classmindspore_ops_ReluGrad`

- :doc:`../generate/classmindspore_ops_ReplicationPad1D`

- :doc:`../generate/classmindspore_ops_ReplicationPad1DGrad`

- :doc:`../generate/classmindspore_ops_ReplicationPad2D`

- :doc:`../generate/classmindspore_ops_ReplicationPad2DGrad`

- :doc:`../generate/classmindspore_ops_ReplicationPad3D`

- :doc:`../generate/classmindspore_ops_ReplicationPad3DGrad`

- :doc:`../generate/classmindspore_ops_Reshape`

- :doc:`../generate/classmindspore_ops_ReshapeAndCache`

- :doc:`../generate/classmindspore_ops_Resize`

- :doc:`../generate/classmindspore_ops_ResizeBicubic`

- :doc:`../generate/classmindspore_ops_ResizeBicubicGrad`

- :doc:`../generate/classmindspore_ops_ResizeBilinearGrad`

- :doc:`../generate/classmindspore_ops_ResizeBilinearV2`

- :doc:`../generate/classmindspore_ops_ResizeD`

- :doc:`../generate/classmindspore_ops_ResizeLinear1D`

- :doc:`../generate/classmindspore_ops_ResizeLinear1DGrad`

- :doc:`../generate/classmindspore_ops_ResizeNearestNeighbor`

- :doc:`../generate/classmindspore_ops_ResizeNearestNeighborGrad`

- :doc:`../generate/classmindspore_ops_ResizeNearestNeighborV2`

- :doc:`../generate/classmindspore_ops_ResizeNearestNeighborV2Grad`

- :doc:`../generate/classmindspore_ops_Return`

- :doc:`../generate/classmindspore_ops_ReverseSequence`

- :doc:`../generate/classmindspore_ops_ReverseV2`

- :doc:`../generate/classmindspore_ops_RFFT`

- :doc:`../generate/classmindspore_ops_Rfft`

- :doc:`../generate/classmindspore_ops_RFFT2`

- :doc:`../generate/classmindspore_ops_RFFTN`

- :doc:`../generate/classmindspore_ops_RightShift`

- :doc:`../generate/classmindspore_ops_ROIPooling`

- :doc:`../generate/classmindspore_ops_Roll`

- :doc:`../generate/classmindspore_ops_Round`

- :doc:`../generate/classmindspore_ops_Rsqrt`

- :doc:`../generate/classmindspore_ops_RsqrtGrad`

- :doc:`../generate/classmindspore_ops_ScalarAdd`

- :doc:`../generate/classmindspore_ops_ScalarBool`

- :doc:`../generate/classmindspore_ops_ScalarCast`

- :doc:`../generate/classmindspore_ops_ScalarDiv`

- :doc:`../generate/classmindspore_ops_ScalarEq`

- :doc:`../generate/classmindspore_ops_ScalarFloorDiv`

- :doc:`../generate/classmindspore_ops_ScalarGe`

- :doc:`../generate/classmindspore_ops_ScalarGt`

- :doc:`../generate/classmindspore_ops_ScalarLe`

- :doc:`../generate/classmindspore_ops_ScalarLog`

- :doc:`../generate/classmindspore_ops_ScalarLt`

- :doc:`../generate/classmindspore_ops_ScalarMod`

- :doc:`../generate/classmindspore_ops_ScalarMul`

- :doc:`../generate/classmindspore_ops_ScalarPow`

- :doc:`../generate/classmindspore_ops_ScalarSub`

- :doc:`../generate/classmindspore_ops_ScalarToTensor`

- :doc:`../generate/classmindspore_ops_ScalarUadd`

- :doc:`../generate/classmindspore_ops_ScalarUsub`

- :doc:`../generate/classmindspore_ops_Scale`

- :doc:`../generate/classmindspore_ops_ScaleFusion`

- :doc:`../generate/classmindspore_ops_Scatter`

- :doc:`../generate/classmindspore_ops_ScatterNd`

- :doc:`../generate/classmindspore_ops_ScatterNdUpdate`

- :doc:`../generate/classmindspore_ops_Select`

- :doc:`../generate/classmindspore_ops_SequenceConcat`

- :doc:`../generate/classmindspore_ops_SGD`

- :doc:`../generate/classmindspore_ops_Shape`

- :doc:`../generate/classmindspore_ops_Sigmoid`

- :doc:`../generate/classmindspore_ops_SigmoidCrossEntropyWithLogits`

- :doc:`../generate/classmindspore_ops_SigmoidGrad`

- :doc:`../generate/classmindspore_ops_SiLU`

- :doc:`../generate/classmindspore_ops_SiLUGrad`

- :doc:`../generate/classmindspore_ops_Sin`

- :doc:`../generate/classmindspore_ops_Sinc`

- :doc:`../generate/classmindspore_ops_Sinh`

- :doc:`../generate/classmindspore_ops_Size`

- :doc:`../generate/classmindspore_ops_SkipGram`

- :doc:`../generate/classmindspore_ops_SliceExt`

- :doc:`../generate/classmindspore_ops_SliceFusion`

- :doc:`../generate/classmindspore_ops_SmoothL1Loss`

- :doc:`../generate/classmindspore_ops_Softmax`

- :doc:`../generate/classmindspore_ops_SoftmaxBackward`

- :doc:`../generate/classmindspore_ops_SoftmaxCrossEntropyWithLogits`

- :doc:`../generate/classmindspore_ops_SoftplusExt`

- :doc:`../generate/classmindspore_ops_SoftplusGradExt`

- :doc:`../generate/classmindspore_ops_SolveTriangular`

- :doc:`../generate/classmindspore_ops_SpaceToBatch`

- :doc:`../generate/classmindspore_ops_SpaceToBatchND`

- :doc:`../generate/classmindspore_ops_SpaceToDepth`

- :doc:`../generate/classmindspore_ops_SparseSoftmaxCrossEntropyWithLogits`

- :doc:`../generate/classmindspore_ops_SparseToDense`

- :doc:`../generate/classmindspore_ops_Splice`

- :doc:`../generate/classmindspore_ops_Split`

- :doc:`../generate/classmindspore_ops_SplitWithOverlap`

- :doc:`../generate/classmindspore_ops_Sqrt`

- :doc:`../generate/classmindspore_ops_SqrtGrad`

- :doc:`../generate/classmindspore_ops_Square`

- :doc:`../generate/classmindspore_ops_SquaredDifference`

- :doc:`../generate/classmindspore_ops_Squeeze`

- :doc:`../generate/classmindspore_ops_Stack`

- :doc:`../generate/classmindspore_ops_StridedSlice`

- :doc:`../generate/classmindspore_ops_Sub`

- :doc:`../generate/classmindspore_ops_SubExt`

- :doc:`../generate/classmindspore_ops_SubFusion`

- :doc:`../generate/classmindspore_ops_SumExt`

- :doc:`../generate/classmindspore_ops_Switch`

- :doc:`../generate/classmindspore_ops_SwitchLayer`

- :doc:`../generate/classmindspore_ops_Tanh`

- :doc:`../generate/classmindspore_ops_TanhGrad`

- :doc:`../generate/classmindspore_ops_TensorArray`

- :doc:`../generate/classmindspore_ops_TensorArrayRead`

- :doc:`../generate/classmindspore_ops_TensorArrayWrite`

- :doc:`../generate/classmindspore_ops_TensorCopySlices`

- :doc:`../generate/classmindspore_ops_TensorListFromTensor`

- :doc:`../generate/classmindspore_ops_TensorListGetItem`

- :doc:`../generate/classmindspore_ops_TensorListReserve`

- :doc:`../generate/classmindspore_ops_TensorListSetItem`

- :doc:`../generate/classmindspore_ops_TensorListStack`

- :doc:`../generate/classmindspore_ops_TensorShape`

- :doc:`../generate/classmindspore_ops_Tile`

- :doc:`../generate/classmindspore_ops_TileFusion`

- :doc:`../generate/classmindspore_ops_TopK`

- :doc:`../generate/classmindspore_ops_TopkExt`

- :doc:`../generate/classmindspore_ops_TopKFusion`

- :doc:`../generate/classmindspore_ops_Trace`

- :doc:`../generate/classmindspore_ops_Transpose`

- :doc:`../generate/classmindspore_ops_Tril`

- :doc:`../generate/classmindspore_ops_Triu`

- :doc:`../generate/classmindspore_ops_TupleGetItem`

- :doc:`../generate/classmindspore_ops_TupleToList`

- :doc:`../generate/classmindspore_ops_TupleToTensor`

- :doc:`../generate/classmindspore_ops_UniformExt`

- :doc:`../generate/classmindspore_ops_UniformReal`

- :doc:`../generate/classmindspore_ops_Unique`

- :doc:`../generate/classmindspore_ops_UnsortedSegmentSum`

- :doc:`../generate/classmindspore_ops_Unsqueeze`

- :doc:`../generate/classmindspore_ops_Unstack`

- :doc:`../generate/classmindspore_ops_UpsampleBilinear2D`

- :doc:`../generate/classmindspore_ops_UpsampleBilinear2DGrad`

- :doc:`../generate/classmindspore_ops_UpsampleLinear1D`

- :doc:`../generate/classmindspore_ops_UpsampleLinear1DGrad`

- :doc:`../generate/classmindspore_ops_UpsampleNearest1D`

- :doc:`../generate/classmindspore_ops_UpsampleNearest1DGrad`

- :doc:`../generate/classmindspore_ops_UpsampleNearest2D`

- :doc:`../generate/classmindspore_ops_UpsampleNearest2DGrad`

- :doc:`../generate/classmindspore_ops_UpsampleNearest3D`

- :doc:`../generate/classmindspore_ops_UpsampleNearest3DGrad`

- :doc:`../generate/classmindspore_ops_UpsampleTrilinear3D`

- :doc:`../generate/classmindspore_ops_UpsampleTrilinear3DGrad`

- :doc:`../generate/classmindspore_ops_View`

- :doc:`../generate/classmindspore_ops_WeightQuantBatchMatmul`

- :doc:`../generate/classmindspore_ops_Where`

- :doc:`../generate/classmindspore_ops_Zeros`

- :doc:`../generate/classmindspore_ops_ZerosLike`

- :doc:`../generate/classmindspore_ops_ZerosLikeExt`


Functions
---------


- :doc:`../generate/function_mindspore_ops_AddFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_ApplyAdamInferFunc-1`

- :doc:`../generate/function_mindspore_ops_ApplyMomentumInfer-1`

- :doc:`../generate/function_mindspore_ops_AssertInfer-1`

- :doc:`../generate/function_mindspore_ops_AudioSpectrogramInfer-1`

- :doc:`../generate/function_mindspore_ops_AvgPoolFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_BatchToSpaceNDInfer-1`

- :doc:`../generate/function_mindspore_ops_ConstantOfShapeInfer-1`

- :doc:`../generate/function_mindspore_ops_Conv2dInfer-1`

- :doc:`../generate/function_mindspore_ops_CropInfer-1`

- :doc:`../generate/function_mindspore_ops_CustomExtractFeaturesInfer-1`

- :doc:`../generate/function_mindspore_ops_CustomNormalizeInfer-1`

- :doc:`../generate/function_mindspore_ops_CustomPredictInfer-1`

- :doc:`../generate/function_mindspore_ops_DependInfer-1`

- :doc:`../generate/function_mindspore_ops_DepthToSpaceInfer-1`

- :doc:`../generate/function_mindspore_ops_DetectionPostProcessInfer-1`

- :doc:`../generate/function_mindspore_ops_DynamicQuantInfer-1`

- :doc:`../generate/function_mindspore_ops_FakeQuantWithMinMaxVarsInfer-1`

- :doc:`../generate/function_mindspore_ops_FakeQuantWithMinMaxVarsPerChannelInfer-1`

- :doc:`../generate/function_mindspore_ops_FftImagInfer-1`

- :doc:`../generate/function_mindspore_ops_FftRealInfer-1`

- :doc:`../generate/function_mindspore_ops_FullConnectionInfer-1`

- :doc:`../generate/function_mindspore_ops_HashtableLookupInfer-1`

- :doc:`../generate/function_mindspore_ops_LayerNormFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_LeakyReluInfer-1`

- :doc:`../generate/function_mindspore_ops_LrnInfer-1`

- :doc:`../generate/function_mindspore_ops_LshProjectionInfer-1`

- :doc:`../generate/function_mindspore_ops_MaxPoolFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_MaxPoolInfer-1`

- :doc:`../generate/function_mindspore_ops_MfccInfer-1`

- :doc:`../generate/function_mindspore_ops_ModInfer-1`

- :doc:`../generate/function_mindspore_ops_NonMaxSuppressionInfer-1`

- :doc:`../generate/function_mindspore_ops_PadInfer-1`

- :doc:`../generate/function_mindspore_ops_PriorBoxInfer-1`

- :doc:`../generate/function_mindspore_ops_QuantDTypeCastInfer-1`

- :doc:`../generate/function_mindspore_ops_RaggedRangeInfer-1`

- :doc:`../generate/function_mindspore_ops_RandomStandardNormalInfer-1`

- :doc:`../generate/function_mindspore_ops_ReduceInfer-1`

- :doc:`../generate/function_mindspore_ops_ReverseSequenceInfer-1`

- :doc:`../generate/function_mindspore_ops_RfftInfer-1`

- :doc:`../generate/function_mindspore_ops_ROIPoolingInfer-1`

- :doc:`../generate/function_mindspore_ops_ScatterNdUpdateInfer-1`

- :doc:`../generate/function_mindspore_ops_SGDInfer-1`

- :doc:`../generate/function_mindspore_ops_SkipGramInfer-1`

- :doc:`../generate/function_mindspore_ops_SliceFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_SmoothL1LossInfer-1`

- :doc:`../generate/function_mindspore_ops_SpaceToBatchNDInfer-1`

- :doc:`../generate/function_mindspore_ops_SpaceToDepthInfer-1`

- :doc:`../generate/function_mindspore_ops_SparseSoftmaxCrossEntropyWithLogitsInfer-1`

- :doc:`../generate/function_mindspore_ops_SparseToDenseInfer-1`

- :doc:`../generate/function_mindspore_ops_SpliceInfer-1`

- :doc:`../generate/function_mindspore_ops_SquaredDifferenceInfer-1`

- :doc:`../generate/function_mindspore_ops_SqueezeInfer-1`

- :doc:`../generate/function_mindspore_ops_StackInfer-1`

- :doc:`../generate/function_mindspore_ops_TensorListFromTensorInfer-1`

- :doc:`../generate/function_mindspore_ops_TensorListStackInfer-1`

- :doc:`../generate/function_mindspore_ops_TopKInfer-1`

- :doc:`../generate/function_mindspore_ops_UnsqueezeInfer-1`

- :doc:`../generate/function_mindspore_ops_WhereInfer-1`
